serice providing html

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -10,7 +10,7 @@
 
 <div class="example-wrapper">
     <div>
-        {{ header }}
+        {{ header | raw}}
     </div>
     <h1>Hello {{ controller_name }}! ✅</h1>
 
