--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello {{ controller_name }}!{% endblock %}
+{% block title %}Hello {{ title }}!{% endblock %}
 
 {% block body %}
 <style>
@@ -12,12 +12,15 @@
     <div>
         {{ header | raw}}
     </div>
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>✅* Hello {{ controller_name }}! *✅</h1>
 
     This friendly message is coming from:
     <ul>
         <li>Your controller at <code><a href="{{ 'src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
         <li>Your template at <code><a href="{{ 'templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
     </ul>
+    {{ render(controller(
+        'App\\Controller\\FooterController'
+    )) }}
 </div>
 {% endblock %}
