headers are getting data per route

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,17 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+        <div>
+            {{ render(controller(
+                'App\\Controller\\HeaderController'
+            )) }}
+        </div>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
+        <div>
+            {{ render(controller(
+                'App\\Controller\\FooterController'
+            )) }}
+        </div>
     </body>
 </html>
