--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,26 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello {{ title }}!{% endblock %}
-
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <div>
-        {{ header | raw}}
-    </div>
-    <h1>✅* Hello {{ controller_name }}! *✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
-    {{ render(controller(
-        'App\\Controller\\FooterController'
-    )) }}
+<div>
+    Homepage
 </div>
 {% endblock %}
+
