now we can display post

--- a/templates/post/post-list.html.twig
+++ b/templates/post/post-list.html.twig
@@ -8,30 +8,7 @@
 
     <div class="example-wrapper">
         <ul>
-            <li>
-                <h1>this is post list!</h1>
-            </li>
-            <li>
-                <h1>this is post list!</h1>
-            </li>
-            <li>
-                <h1>this is post list!</h1>
-            </li>
-            <li>
-                <h1>this is post list!</h1>
-            </li>
-            <li>
-                <h1>this is post list!</h1>
-            </li>
-            <li>
-                <h1>this is post list!</h1>
-            </li>
-            <li>
-                <h1>this is post list!</h1>
-            </li>
-            <li>
-                <h1>this is post list!</h1>
-            </li>
+            <li><a href={{ url }}>Why aramis is the best</a></li>
         </ul>
     </div>
 {% endblock %}
