--- a/templates/post/single-post.html.twig
+++ b/templates/post/single-post.html.twig
@@ -2,12 +2,10 @@
 
 
 {% block body %}
-    <style>
-        .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-        .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-    </style>
-
-    <div class="example-wrapper">
-        <h1>this is article!</h1>
+    <div class=>
+        <h1>{{ title }}</h1>
+        <div>
+            {{ content }}
+        </div>
     </div>
 {% endblock %}
