--- a/templates/footer/index.html.twig
+++ b/templates/footer/index.html.twig
@@ -1,5 +1,5 @@
 
-<div>
+<div style="height:300px; display: flex">
     <p>Just a footer</p>
-    <h6> {{ content }}!</h6>
+    <h6> {{ content | markdown }}!</h6>
 </div>
