--- a/templates/header/index.html.twig
+++ b/templates/header/index.html.twig
@@ -1,6 +1,6 @@
-<div>
+<div style=" max-height:300px; display: flex;">
     just a header
     <h5>
-        {{ content }}
+        {{ content | markdown}}
     </h5>
 </div>
