prototype widget managment service

--- a/templates/widget_provider/index.html.twig
+++ b/templates/widget_provider/index.html.twig
@@ -1,5 +1,5 @@
 <div>
-    {% if content is defined %}
-        {{ content }}
+    {% if contact is defined %}
+        {{ contact | raw }}
     {% endif %}
 </div>
