--- a/templates/post/single-post.html.twig
+++ b/templates/post/single-post.html.twig
@@ -7,5 +7,8 @@
         <div>
             {{ content | markdown}}
         </div>
+        <div>
+            {{ widgets | raw}}
+        </div>
     </div>
 {% endblock %}
