mechanics are ready

--- a/templates/widget_provider/index.html.twig
+++ b/templates/widget_provider/index.html.twig
@@ -1,5 +1,12 @@
-<div>
+
     {% if contact is defined %}
+        <div>
         {{ contact | raw }}
+        </div>
     {% endif %}
-</div>
+    {% if why is defined %}
+        <div>
+            {{ why | raw }}
+        </div>
+    {% endif %}
+
