--- a/templates/contact_form/index.html.twig
+++ b/templates/contact_form/index.html.twig
@@ -1,17 +1,17 @@
 <div>
     <form style="max-width:300px;">
-        <h1>contact us u faggot</h1>
+        <h1>We can't wait till you contact us!</h1>
         <label>name:</label><br>
-        <input placeholder="im a faggot" type="text"><br>
-        <label>your email, faggot</label><br>
-        <input placeholder="ima@faggot.com" type="text"><br>
-        <label>call us u faggot</label><br>
-        <input placeholder="500faggot104" type="text"><br>
-        <label>contact us u faggot</label><br>
-        <input placeholder="im a faggot" type="text"><br>
-        <label>Do you want to suck a fat cock?</label><br>
+        <input placeholder="your name!" type="text"><br>
+        <label>your email:</label><br>
+        <input placeholder="great@email.com" type="text"><br>
+        <label>call us!</label><br>
+        <input placeholder="your number" type="text"><br>
+        <label>contact us!</label><br>
+        <input placeholder="im excited to contact" type="text"><br>
+        <label>have a good day!</label><br>
         <input type="checkbox" name="cock" value="yes"> yes<br>
-        <input type="checkbox" name="cock" value="YESSS!"> YESSSS!<br>
-        <input type="submit" value="Im a faggot">
+        <input type="checkbox" name="cock'nt" value="yesn't"> yesn't!<br>
+        <input type="submit" value="contac!">
     </form>
 </div>
