--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -3,18 +3,10 @@
 {% block title %}Hello {{ controller_name }}!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'src/Controller/PostController.php'|file_link(0) }}">src/Controller/PostController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'templates/post/index.html.twig'|file_link(0) }}">templates/post/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <div style="height: 500px" class="container-fluid" style=" display:flex; justify-content: center">
+            <h1 class="align-middle">
+                Now header downnloads footer data and vice versa, controllers are still the same
+                <a href="http://www.aramis.local/post/1">post/1</a>
+            </h1>
+    </div>
 {% endblock %}
