ideas about how should it work

--- a/templates/article/product-landing-page.html.twig
+++ b/templates/article/product-landing-page.html.twig
@@ -1,3 +1,11 @@
-<div>
-    its a landing page
-</div>
+{% extends 'base.html.twig' %}
+
+{% block body %}
+    {#<div> {{ title }} </div>#}
+    {#<div> {{ slug }} </div>#}
+    {#<div> {{ metaDescription }} </div>#}
+    {#<div> {{ productFilters }} </div>#}
+    {#<div> {{ topContent | markdown }} </div>#}
+    {#<div> {{ bottomContent | markdown}} </div>#}
+jesus fucking christ
+{% endblock %}
