--- a/templates/article/product-landing-page.html.twig
+++ b/templates/article/product-landing-page.html.twig
@@ -1,11 +1,12 @@
-{% extends 'base.html.twig' %}
+{#{% extends 'base.html.twig' %}#}
 
-{% block body %}
+{#{% block body %}#}
     {#<div> {{ title }} </div>#}
     {#<div> {{ slug }} </div>#}
     {#<div> {{ metaDescription }} </div>#}
     {#<div> {{ productFilters }} </div>#}
     {#<div> {{ topContent | markdown }} </div>#}
     {#<div> {{ bottomContent | markdown}} </div>#}
-jesus fucking christ
-{% endblock %}
+{#jesus fucking christ#}
+{#{% endblock %}#}
+<h1>QARSON ZNISZCZYL MI ZYCIE</h1>
