--- a/templates/article/single-post.html.twig
+++ b/templates/article/single-post.html.twig
@@ -1,7 +1,7 @@
-{% extends 'base.html.twig' %}
+{#{% extends 'base.html.twig' %}#}
 
 
-{% block body %}
+{#{% block body %}#}
     {#<div>#}
         {#<h1>{{ title | markdown}}</h1>#}
         {#<div>#}
@@ -13,4 +13,4 @@
 {#<div>#}
     {#{{ widgets | raw}}#}
 {#</div>#}
-{% endblock %}
+{#{% endblock %}#}
