--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -1,9 +1,9 @@
-{% extends 'base.html.twig' %}
+{#{% extends 'base.html.twig' %}#}
 
-{% block title %}Hello {{ controller_name }}!{% endblock %}
+{#{% block title %}Hello {{ controller_name }}!{% endblock %}#}
 
-{% block body %}
+{#{% block body %}#}
     <div>
         homepage but this comes form article controller
     </div>
-{% endblock %}
+{#{% endblock %}#}
