--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,6 +22,11 @@
                 <div class="col-8">
                     {% block body %}{% endblock %}
                 </div>
+                <div class="container-fluid">
+                    {{ render(controller(
+                        'App\\Controller\\ArticleController'
+                    )) }}
+                </div>
                 <div class="col-4">
                     {% block nav %}{% endblock %}
                 </div>
