--- a/templates/landing_page/xxx.html.twig
+++ b/templates/landing_page/xxx.html.twig
@@ -1,11 +1,11 @@
-{% extends 'base.html.twig' %}
+{#{% extends 'base.html.twig' %}#}
 
-{% block body %}
-    SUCK A CITADINE
+{#{% block body %}#}
+
     <div> {{ title }} </div>
     <div> {{ slug }} </div>
     <div> {{ metaDescription }} </div>
     <div> {{ productFilters }} </div>
     <div> {{ topContent | markdown }} </div>
     <div> {{ bottomContent | markdown}} </div>
-{% endblock %}
+{#{% endblock %}#}
